--- a/main.css
+++ b/main.css
@@ -1,8 +1,14 @@
-#main-camera{
-    width: 320px;
-    height: 240px;
+canvas {
+  width: 100%;
+  z-index: 1;
 }
-#camera-2{
-    width: 320px;
-    height: 240px;
+
+#main-camera{
+  width: 320px;
+  height: 240px;
+}
+
+.preview-container{
+  width: 160px;
+  height: 120px;
 }
