--- a/main.css
+++ b/main.css
@@ -8,7 +8,10 @@ canvas {
   height: 240px;
 }
 
-.preview-container{
+.preview-camera{
   width: 160px;
   height: 120px;
+}
+.preview-container{
+  width: 80vw;
 }
