--- a/main.css
+++ b/main.css
@@ -1,17 +1,35 @@
+body, html {
+  width: 100%;
+  height: 100%;
+  background-color: #f7f7f7;
+}
 canvas {
   width: 100%;
   z-index: 1;
 }
 
-#main-camera{
-  width: 320px;
-  height: 240px;
+#content{
+  width: 80vw;
+  margin: auto;
 }
 
+#title{
+  text-align: center;
+}
+
+#main-camera{
+  width: 480px;
+  height: 360px;
+  margin: auto;
+}
+
+#preview-container{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 .preview-camera{
   width: 160px;
   height: 120px;
-}
-.preview-container{
-  width: 80vw;
+  margin: 20px 20px;
 }
