--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body, html {
   width: 100%;
   height: 100%;
-  background-color: #f7f7f7;
+  background-color: #ECECEA;
 }
 canvas {
   width: 100%;
@@ -49,16 +49,20 @@ canvas {
 }
 
 #main-camera{
-  width: 480px;
-  height: 360px;
+  width: calc(100vw*.4);
+  height: calc(100vw*.4 / 1.333);
   margin: auto;
   margin-bottom: 30px;
+  box-shadow: 0px 5px 25px 5px rgba(0, 0, 0, 0.15);
 }
 
 #preview-container{
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+.preview-camera:hover{
+  box-shadow: 0px 5px 25px 5px rgba(0, 0, 0, 0.15);
 }
 .preview-camera{
   width: 160px;
